# DiRender

./: .gitignore  .gitmodules  .globalrc  .travis.yml  CMakeLists.txt  README.md  clang-format-all.sh  clang-format-check.py  cornel_box.toml  sample.toml  source_list.cmake
.github/workflows/: linux.yml  windows.yml
cmake/: cmake_filesystem.cmake  gtest.cmake  unity_build.cmake
debugger/: CMakeLists.txt  glsupport.cc  glsupport.h  main.cc  parse_ray_log.hpp
debugger/shaders/: BlinnPhong.frag  lights.frag  line.geom  line.vert  simple.frag  simple.vert
scripts/: wechat_push.py
src/: main.cc
src/accelerator/: bvh.cc  bvh.h  linear_list.cc  linear_list.h
src/cameras/: camera.cc  camera.h  pinhole_camera.cc  pinhole_camera.h
src/cores/: bounds.cc  bounds.h  intersection.hpp  primitive.h  ray.hpp  render.cc  render.h  scene.cc  scene.h
src/material/: cook_torrance.cc  cook_torrance.h  dielectric_material.cc  dielectric_material.h  glass_material.cc  glass_material.h  material.h  matte_material.cc  matte_material.h  metal_material.h  phong_material.cc  phong_material.h
src/math/: geometry.hpp  math_utils.hpp  matrix.cc  matrix.hpp  transform.cc  transform.h  vector.hpp
src/renderer/: bling_phong_renderer.cc  bling_phong_renderer.h  direct_light_renderer.cc  direct_light_renderer.h  normal_renderer.cc  normal_renderer.h  path_tracing_renderer.cc  path_tracing_renderer.h  renderer.h
src/sampler/: halton_sampler.cc  halton_sampler.hh  naive_sampler.cc  naive_sampler.hh  sampler.cc  sampler.hh
src/shapes/: quad.cc  quad.h  shape.h  sphere.cc  sphere.h  triangle.cc  triangle.h
src/texture/: checker_texture.h  constant_texture.h  texture.h
src/utils/: OBJ_Loader_wrapper.cc  OBJ_Loader_wrapper.h  cmake_vars.h.in  config.h  di_global.h  high_resolution_timer.cc  high_resolution_timer.h  parse_scene.cc  parse_scene.hh  parse_scene.hpp  parse_scene_txt.cc  parse_scene_txt.hh  parse_scene_txt.hpp  resource_path_searcher.cc  resource_path_searcher.h  stb_image_wrapper.cc  stb_image_wrapper.h  thread_pool.hpp
test/: CMakeLists.txt  math_utils_test.cc  matrix4.cc  matrix4_test.cc  tests.cc  thread_pool_test.cc  vector_test.cc
